PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <description>신입 대상으로 진행한 면담일지 개체</description>
    <label>면담일지</label>
    <nameField>
        <displayFormat>No.{YYYY}-{MM}-{DD}/{00}</displayFormat>
        <label>면담일지</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>