PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Advice__c.field-meta.xml
<CustomField>
    <fullName>Intv_Advice__c</fullName>
    <label>조언 내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>