PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Company__c.field-meta.xml
<CustomField>
    <fullName>Intv_Company__c</fullName>
    <defaultValue>&quot;(주)대유넥스티어&quot;</defaultValue>
    <label>기업명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>