PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Content__c.field-meta.xml
<CustomField>
    <fullName>Intv_Content__c</fullName>
    <description>면담 내용이나 논의된 사항을 기록</description>
    <label>업무 내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>