PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Date__c.field-meta.xml
<CustomField>
    <fullName>Intv_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>면담이 진행된 날짜를 기록</description>
    <label>면담 일시</label>
    <type>DateTime</type>
</CustomField>