PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Intv_Improvements__c</fullName>
    <label>개선해야한다고 생각하는 점</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>