PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Mentee__c.field-meta.xml
<CustomField>
    <fullName>Intv_Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>면담 대상자인 멘티</description>
    <label>사원</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>면담일지 (피면담자 명)</relationshipLabel>
    <relationshipName>Intv_Mentee</relationshipName>
    <type>Lookup</type>
</CustomField>