PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_MenteeUser__c.field-meta.xml
<CustomField>
    <fullName>Intv_MenteeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사원 명</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intv_MenteeId</relationshipName>
    <type>Lookup</type>
</CustomField>