PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Intv_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>면담을 진행하고 레코드를 작성한 멘토</description>
    <inlineHelpText>빈 값일 때 현재 사용자가 자동으로 등록됩니다.</inlineHelpText>
    <label>담당 멘토</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>면담일지</relationshipLabel>
    <relationshipName>Intv_Mentor</relationshipName>
    <type>Lookup</type>
</CustomField>