PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_MentorUser__c.field-meta.xml
<CustomField>
    <fullName>Intv_MentorUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당 멘토 명</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intv_MentorUser</relationshipName>
    <type>Lookup</type>
</CustomField>