PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Name__c.field-meta.xml
<CustomField>
    <fullName>Intv_Name__c</fullName>
    <label>면담 일지</label>
    <length>30</length>
    <type>Text</type>
</CustomField>