PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_NameLink__c.field-meta.xml
<CustomField>
    <fullName>Intv_NameLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, Intv_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>면담 일지명</label>
    <type>Text</type>
</CustomField>