PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Others__c.field-meta.xml
<CustomField>
    <fullName>Intv_Others__c</fullName>
    <label>기 타</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>