PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Intv_Strengths__c</fullName>
    <label>잘하고있다고 생각하는 점</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>