PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Training__c.field-meta.xml
<CustomField>
    <fullName>Intv_Training__c</fullName>
    <label>훈련 관련</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>