PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_Work__c.field-meta.xml
<CustomField>
    <fullName>Intv_Work__c</fullName>
    <label>근로 관련</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>