PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/fields/Intv_WorkGoals__c.field-meta.xml
<CustomField>
    <fullName>Intv_WorkGoals__c</fullName>
    <label>업무 목표</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>