PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/recordTypes/InterviewRecordType_Internal.recordType-meta.xml
<RecordType>
    <fullName>InterviewRecordType_Internal</fullName>
    <active>true</active>
    <label>내부</label>
</RecordType>