PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/recordTypes/InterviewRecordType_IPP.recordType-meta.xml
<RecordType>
    <fullName>InterviewRecordType_IPP</fullName>
    <active>true</active>
    <label>IPP</label>
</RecordType>