PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Intv_NameLink__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intv_Date__c</columns>
    <columns>Intv_Mentee__c</columns>
    <columns>Intv_Others__c</columns>
    <columns>Intv_Mentor__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>