PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/listViews/Interview_Internal.listView-meta.xml
<ListView>
    <fullName>Interview_Internal</fullName>
    <columns>Intv_NameLink__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intv_Date__c</columns>
    <columns>Intv_Mentee__c</columns>
    <columns>Intv_WorkIntensity__c</columns>
    <columns>Intv_Content__c</columns>
    <columns>Intv_WorkGoals__c</columns>
    <columns>Intv_Mentor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Interview__c.InterviewRecordType_Internal</value>
    </filters>
    <label>내부 면담일지</label>
</ListView>