PA_Education/TestMenifest/force-app/main/default/objects/Interview__c/listViews/Interview_IPP.listView-meta.xml
<ListView>
    <fullName>Interview_IPP</fullName>
    <columns>Intv_NameLink__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intv_Date__c</columns>
    <columns>Intv_Mentee__c</columns>
    <columns>Intv_Work__c</columns>
    <columns>Intv_Training__c</columns>
    <columns>Intv_Mentor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Interview__c.InterviewRecordType_IPP</value>
    </filters>
    <label>IPP 면담일지</label>
</ListView>